:wrench: Fix horizontal scroll on main page.

--- a/markup/modules/production/production.styl
+++ b/markup/modules/production/production.styl
@@ -20,7 +20,7 @@
 .proguction-machine_img
   display: block
   max-width: 1920px
-  width: 100vw
+  width: 100%
 
   @media only screen and (max-width: $palmtopWidth)
     max-width: 100%;
@@ -90,12 +90,3 @@
   .production-content_btn:after
     top: 30px
     right: 10px
-
-
-
-
-
-
-
-
-
